# OpenENV-1

./: CONTRIBUTING.md  Dockerfile  HuggingFace_Blog_Post.md  LICENSE  LOCALHOST_GUIDE.md  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  rubric_system (2).py  run.bat  run.sh  setup_and_run.py
.github/workflows/: test.yml
app/: data.py  environment.py  main.py  models.py
app/tasks/: registry.py  task1_triage.py  task2_response.py  task3_inbox_zero.py
scripts/: baseline.py
server/: __init__.py  app.py
tests/: test_env.py
